# strangetools

./: LICENSE  README.md  pyproject.toml
src/strangetools/: strangecollections.py
tests/: test_strangecollections.py
